# iconoscope

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  unit-tests.yml
embed_mosaic/: cli.py  embed.py  reduce.py
src/iconoscope/: __init__.py  cache.py  cli.py  cluster.py  embed.py  layout.py  mosaic.py  reduce.py  utils.py  viewer.py
tests/: conftest.py  test_cli.py  test_embed.py
viewer/: index.html  package.json  vite.config.js
viewer/src/: App.svelte  ScatterView.svelte  stores.js
