[project]
name = "iconoscope"
version = "0.1.0"
description = "CNN/ViT image embedding mosaic — extract features, reduce to 2D, render a visual atlas"
readme = "README.md"
authors = [
    { name = "rlskoeser", email = "rebecca.s.koeser@princeton.edu" }
]
license = {text = "Apache-2"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers>=4.56.0",
    "tqdm",
    "h5py",
]

[project.optional-dependencies]
umap = ["umap-learn"]
clip = ["clip @ git+https://github.com/openai/CLIP.git"]

[dependency-groups]
dev = [
    "umap-learn",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[project.scripts]
iconoscope = "iconoscope.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
