[project]
name = "iconoscope"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rlskoeser", email = "rebecca.s.koeser@princeton.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "polars>=1.41.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
]

[project.scripts]
iconoscope = "iconoscope.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
